Added the new section Tracking_10R80

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -109,6 +109,7 @@
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
+								<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
 
