Added OP80 and OP110 to the main tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -21,7 +21,10 @@
 		function R3050(){location.replace("{{request.session.local_toggle}}/chart2_3050")}
 		function L934130(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP30")}
 		function R934130(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP30")}
-	
+		function L934180(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP80")}
+		function R934180(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP80")}
+		function L9341110(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP110")}
+		function R9341110(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP110")}
 	
 	</script>
 	
@@ -324,6 +327,10 @@
 	<button onclick="L9341()">Left</button> (9341 INSP) <button onclick="R9341()">Right</button>
 	<br>
 	<button onclick="L934130()">Left</button> (9341 OP30) <button onclick="R934130()">Right</button>
+	<br>
+	<button onclick="L934180()">Left</button> (9341 OP80) <button onclick="R934180()">Right</button>
+	<br>
+	<button onclick="L9341110()">Left</button> (9341 OP110) <button onclick="R9341110()">Right</button>
 	<br>
 	<button onclick="L0455()">Left</button> (0455 INSP) <button onclick="R0455()">Right</button>
 	</div>
