Added links from Tracking to Tracking 10R80

--- a/trakberry/templates/track_10R80.html
+++ b/trakberry/templates/track_10R80.html
@@ -11,7 +11,7 @@
 	</script>
 	
 	<script>
-		function L9341(){location.replace("{{request.session.local_toggle}}/chart1_9341")}
+		function all_track(){location.replace("{{request.session.local_toggle}}/tracking")}
 		function R9341(){location.replace("{{request.session.local_toggle}}/chart2_9341")}
 		function L0455(){location.replace("{{request.session.local_toggle}}/chart1_0455")}
 		function R0455(){location.replace("{{request.session.local_toggle}}/chart2_0455")}
@@ -269,6 +269,10 @@
 	<div class="wrapper_main">
 	<div class="head1_u">
 		<font size="6"><b><u>10R80 Live Tracking</u></b></font>
+
+		<button style="position:absolute; left:80%;top:1%; background-color: #5CC4ED;border-radius: 10px;width:70pxpx;height:25px;font-weight: 600;" onclick="all_track()">All Tracking</button>
+
+
 	</div>
 	
 	<div class="frame1">  
