--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -11,6 +11,7 @@
 	</script>
 	
 	<script>
+		function all_track(){location.replace("{{request.session.local_toggle}}/tracking_10R80")}
 		function L9341(){location.replace("{{request.session.local_toggle}}/chart1_9341")}
 		function R9341(){location.replace("{{request.session.local_toggle}}/chart2_9341")}
 		function L0455(){location.replace("{{request.session.local_toggle}}/chart1_0455")}
@@ -39,7 +40,7 @@
 		.frame4 {color:black;text-align:center;background:rgb(235, 142, 89);float:left;width:49%;position:relative;left:5px;}
 		.frame5{color:black;text-align:center;background:rgb(168, 168, 168);float:right;width:40%}
 		.head1{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(114, 159, 243);width:85%}
-		.head1_u{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(255, 221, 169);width:100%}
+		.head1_u{color:black;text-align:center;border: .4px solid rgb(0, 0, 0);background:rgb(245, 211, 160);width:100%}
 		.head2_u{color:black;text-align:center;float:left;font-size: 60%;border: .4px solid rgb(0, 0, 0);background: rgb(184, 167, 142);width:25%}
 		.body1_u{color:black;text-align:left;float: left;border: 1px solid rgb(0, 0, 0);width:25%}
 		.head2{color:black;text-align:center;float:left;font-size: 60%;border: .4px solid rgb(222, 231, 95);background: rgb(184, 167, 142);width:65%}
@@ -187,6 +188,8 @@
 	<div class="wrapper_main">
 	<div class="head1_u">
 		<font size="6"><b><u>Live Tracking</u></b></font>
+		<button style="position:absolute; left:80%;top:1%; background-color: #bba943;border-radius: 10px;width:70pxpx;height:25px;font-weight: 600;" onclick="all_track()">10R80 Tracking</button>
+
 	</div>
 	
 	
