--- a/trakberry/templates/supervisor_down.html
+++ b/trakberry/templates/supervisor_down.html
@@ -76,8 +76,8 @@ $(document).ready(function () {
 <input style="font-size:14px;width:320px;height:30px;" name="reason" type="textarea">
 </th></tr>
 <tr><th bgcolor="#B6D6E0"><center>
-<font color="#000000" size ="4">Priority </font> <font color="#000000" size ="2">(Default 1, lower number higher priority)</font><font color="#000000" size ="4"></font><br>
-<input style="font-size:14px;width:320px;height:30px;"name="priority" type="number" value="50">
+<!-- <font color="#000000" size ="4">Priority </font> <font color="#000000" size ="2">(Priority Pre Defined)</font><font color="#000000" size ="4"></font><br> -->
+<input style="font-size:14px;width:320px;height:30px;"name="priority" type="hidden">
 
 <!-- <select style="font-size:14px;width:320px;height:30px;" name="priority">
 <option value="1">1</option>
