--- a/trakberry/templates/supervisor_edit.html
+++ b/trakberry/templates/supervisor_edit.html
@@ -5,18 +5,25 @@
 <form action="" method="post">{% csrf_token %}
 <table style="width:40%;margin-left:10%;">
 <tr><th bgcolor="#B6D6E0"><center>
-<font color="#000000" size ="4">Machine Down<br>
+<font color="#000000" size ="4">Machine Down <br>
 <input style="font-size:14px;width:320px;height:30px;" name="machine" type="textarea" value="{{request.session.machinenum}}">
-</th></tr>
+</th>
+
+<th bgcolor="#B6D6E0"><center>
+	<font color="#000000" size ="4">Part<br>
+	<input style="font-size:14px;width:75px;height:30px;" name="part" type="textarea" value="{{request.session.priority_part}}">
+	</th>
+
+</tr>
 <tr><th bgcolor="#B6D6E0"><center>
 <font color="#000000" size ="4">Reason<br>
 <input style="font-size:14px;width:320px;height:30px;" name="reason" type="textarea" value="{{request.session.problem}}">
 </th></tr>
 
 <tr><th bgcolor="#B6D6E0"><center>
-<font color="#000000" size ="4">Priority<br>
 
-<input style="font-size:14px;width:320px;height:30px;"name="priority" type="number" value="{{request.session.priority}}">
+
+<input style="font-size:14px;width:320px;height:30px;"name="priority" type="hidden" value="{{request.session.priority}}">
 
 
 <!-- <select style="font-size:14px;width:270px;height:30px;" name="priority">
