--- a/trakberry/templates/maint.html
+++ b/trakberry/templates/maint.html
@@ -183,14 +183,14 @@
 
 	{% if i.3 == M %}
 		<div class="row">
-			<div class="col-sm-8" style="background-color: #F98E51;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
+			<div class="col-sm-8" style="background-color: #F98E51;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
 		</div>	
 		<div class="row">
-			<div class="col-sm-4" style="background-color: #F98E51;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+			<div class="col-sm-4" style="background-color: #F98E51;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 				<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 			</div>
 
-			<div class="col-sm-4" style="background-color: #FFE8DA;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+			<div class="col-sm-4" style="background-color: #FFE8DA;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 			<center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
 			</div>
 		</div>
@@ -202,7 +202,7 @@
 		<!-- <div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">
 			{{i.0}} : {{ i.1}}</div> -->
 			{% if i.1|slice:"-3:" != wfp %}
-			<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">
+			<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
 				{{i.0}} : {{ i.1 }}</div> 
 			
 	</div>	
@@ -219,16 +219,16 @@
 {% else %}
     <div class="row">
 			{% if i.1|slice:"-3:" != wfp %}
-		<div class="col-sm-8" style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
+		<div class="col-sm-8" style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
 		
 	</div>	
     <div class="row">
 		
-		<div class="col-sm-4" style="background-color: #999999;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+		<div class="col-sm-4" style="background-color: #999999;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 		
 		<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 		</div>
-		<div class="col-sm-4" style="background-color: #DCDCDC;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+		<div class="col-sm-4" style="background-color: #DCDCDC;border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
         <!-- <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center> -->
         <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
 		</div>
