--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -114,7 +114,14 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Mid">Mid Area 1</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Days">Days Area 1</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Aft">Aft Area 1</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Days">Days Area 2</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Mid">Mid Area 2</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Aft">Aft Area 2</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Day">Days Area 3</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Aft">Aft Area 3</a></li>
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Mid">Mid Area 3</a></li>
 								<li><a href="{{request.session.local_toggle}}/mgmt_priorities">Priorities</a></li>
 								<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
