--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -113,6 +113,7 @@
 						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
+								<li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Mid">Mid Area 1</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Days">Days Area 1</a></li>
 								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Aft">Aft Area 1</a></li>
