--- a/trakberry/templates/test78.html
+++ b/trakberry/templates/test78.html
@@ -4,7 +4,7 @@
 <br><br>
 <!-- <meta http-equiv="refresh" content="5; url={{request.session.local_toggle}}/production_entry_check" /> -->
 <font style="font-size: 24px; color:rgb(196, 196, 196);">
-***** Matrix Updated *****  <br>
+***** Update Done *****  <br>
 
 	<br><br><br>	
 
