--- a/trakberry/templates/product_entry.html
+++ b/trakberry/templates/product_entry.html
@@ -74,7 +74,7 @@
 <table>
 	<tr>
 		<td colspan=9 style="font-size: 35px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
-			<center><b>Production Fixes for {{request.session.variable1}}</b></center>
+			<center><b>Production Fixes for {{request.session.shift_prod}}</b></center>
 		</td>
 	</tr>
 	<tr>
