updated 10R80 tracking bug

--- a/trakberry/templates/track_10R80.html
+++ b/trakberry/templates/track_10R80.html
@@ -278,7 +278,7 @@
 	<div class="frame1">  
 	<br> <center>
 		<font style="font-size: 35px; color:rgb(141, 179, 236); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
-			{{request.session.area1}}
+			{{request.session.8area1}}
 	</font>
 	</center>
 	<div id="chart_div" style="width: 100%; height: 400px; "></div>
@@ -288,7 +288,7 @@
 	<div class="frame2">  
 		<br> <center>
 		<font style="font-size: 35px; color:rgb(141, 179, 236); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
-			{{request.session.area2}}
+			{{request.session.8area2}}
 		</font>
 	</center>
 		<div id="chart2_div" style="width: 100%; height: 400px; "></div>
@@ -298,7 +298,7 @@
 	<div class="frame1">  
 		<br> <center>
 			<font style="font-size: 35px; color:rgb(141, 179, 236); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
-				{{request.session.area3}}
+				{{request.session.8area3}}
 		</font>
 		</center>
 		<div id="chart3_div" style="width: 100%; height: 400px; "></div>
@@ -309,7 +309,7 @@
 		<div class="frame2">  
 			<br> <center>
 			<font style="font-size: 35px; color:rgb(141, 179, 236); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
-				{{request.session.area4}}
+				{{request.session.8area4}}
 			</font>
 		</center>
 			<div id="chart4_div" style="width: 100%; height: 400px; "></div>
