updated production entry fix section

--- a/trakberry/templates/maint_mgmt_main.html
+++ b/trakberry/templates/maint_mgmt_main.html
@@ -40,7 +40,8 @@
 
 
 
-			<link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  <!-- include the proper styling -->
+			<!-- <link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  -->
+			 <!-- include the proper styling -->
 
       {% block grid %}
       {% endblock %}
