--- a/trakberry/templates/product_entry.html
+++ b/trakberry/templates/product_entry.html
@@ -172,6 +172,9 @@
 					<button style="column-fill: auto;background-color: rgb(176, 243, 255);border:none;outline:none;"
 						type="submit" name="fix1" value="{{i.0}}" /><b><font style="font-size: 15px;color:rgb(71, 64, 64);";>&nbsp;Fix&nbsp;</font>
 						</b></button>
+						<button style="column-fill: auto;background-color: rgb(127, 241, 133);border:none;outline:none;"
+						type="submit" name="fix_hrs1" value="{{i.0}}" /><b><font style="font-size: 15px;color:rgb(71, 64, 64);";>&nbsp;OK&nbsp;</font>
+						</b></button>
 				{% else %}
 				<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
 						&nbsp;&nbsp;&nbsp;{{i.9}}&nbsp;&nbsp;&nbsp;
