--- a/trakberry/templates/production_check_form.html
+++ b/trakberry/templates/production_check_form.html
@@ -15,17 +15,17 @@
 <br>
 <select style="font-size:20px;width:320px;height:30px;" name="shift" >
 <optgroup label=" ">
-<option value="Plant 1 days">Plant 1 days</option>
-<option value="Plant 1 aft">Plant 1 aft</option>
-<option value="Plant 1 mid">Plant 1 mid</option>
+<option value="Plant 1 Days">Plant 1 Days</option>
+<option value="Plant 1 Aft">Plant 1 Aft</option>
+<option value="Plant 1 Mid">Plant 1 Mid</option>
 </optgroup><optgroup label=" ">
-<option value="Plant 3 days">Plant 3 days</option>
-<option value="Plant 3 aft">Plant 3 aft</option>
-<option value="Plant 3 mid">Plant 3 mid</option>
+<option value="Plant 3 Days">Plant 3 Days</option>
+<option value="Plant 3 Aft">Plant 3 Aft</option>
+<option value="Plant 3 Mid">Plant 3 Mid</option>
 </optgroup><optgroup label=" ">
-<option value="Plant 4 day">Plant 4 day</option>
-<option value="Plant 4 aft">Plant 4 aft</option>
-<option value="Plant 4 mid">Plant 4 mid</option>
+<option value="Plant 4 Day">Plant 4 Day</option>
+<option value="Plant 4 Aft">Plant 4 Aft</option>
+<option value="Plant 4 Mid">Plant 4 Mid</option>
 </optgroup>
 </select>
 
