--- a/trakberry/templates/track_10R80.html
+++ b/trakberry/templates/track_10R80.html
@@ -264,7 +264,7 @@
 					</script>	
 	<!--   ***************************  -->
 	
-	<meta http-equiv="refresh" content="300; url={{request.session.local_toggle}}/tracking_10R80" />
+	<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/tracking_10R80" />
 	
 	<div class="wrapper_main">
 	<div class="head1_u">
@@ -303,6 +303,9 @@
 		</center>
 		<div id="chart3_div" style="width: 100%; height: 400px; "></div>
 		<br>
+		{% for ii in GList3 %}
+		{{ii}} **
+		{% endfor %}
 		</div>
 
 
@@ -314,6 +317,10 @@
 		</center>
 			<div id="chart4_div" style="width: 100%; height: 400px; "></div>
 			<br>
+			
+			{% for ii in GList4 %}
+		{{ii}} **
+		{% endfor %}
 		</div>
 	<br><br>
 	
