Added maint call abilitiy to Maint Mgmt App

--- a/trakberry/templates/maint_mgmt_main.html
+++ b/trakberry/templates/maint_mgmt_main.html
@@ -78,10 +78,10 @@
 				        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                         <li><a href="{{request.session.local_toggle}}/maint_mgmt"><span class="glyphicon glyphicon-home"></span> Main</a></li>
                         <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Manpower<b class="caret"></b></a>
+                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
-                            <li><a href="{{request.session.local_toggle}}/maint_mgmt">Set Current Shift</a></li>
-                            <li><a href="#">All Maintenance</a></li>
+                            <li><a href="{{request.session.local_toggle}}/maint_job_entry">Enter Machine Down</a></li>
+                            <li><a href="#">Add Another Employee</a></li>
                             <li><a href="#">Edit Names</a></li>                  
                         </ul>        
                         </li>
