added AB1V and 10R140 Tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -26,6 +26,16 @@
 		function R934180(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP80")}
 		function L9341110(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP110")}
 		function R9341110(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP110")}
+		function L521430(){location.replace("{{request.session.local_toggle}}/chart1_5214_OP30")}
+		function R521430(){location.replace("{{request.session.local_toggle}}/chart2_5214_OP30")}
+		function L867080(){location.replace("{{request.session.local_toggle}}/chart1_8670_OP80")}
+		function R867080(){location.replace("{{request.session.local_toggle}}/chart2_8670_OP80")}
+		function L540480(){location.replace("{{request.session.local_toggle}}/chart1_5404_OP80")}
+		function R540480(){location.replace("{{request.session.local_toggle}}/chart2_5404_OP80")}
+		function L540180(){location.replace("{{request.session.local_toggle}}/chart1_5401_OP80")}
+		function R540180(){location.replace("{{request.session.local_toggle}}/chart2_5401_OP80")}
+		function L321430(){location.replace("{{request.session.local_toggle}}/chart1_3214_OP30")}
+		function R321430(){location.replace("{{request.session.local_toggle}}/chart2_3214_OP30")}
 	
 	</script>
 	
@@ -336,6 +346,16 @@
 	<button onclick="L9341110()">Left</button> (9341 OP110) <button onclick="R9341110()">Right</button>
 	<br>
 	<button onclick="L0455()">Left</button> (0455 INSP) <button onclick="R0455()">Right</button>
+	<br>
+	<button onclick="L521430()">Left</button> (5214 OP30) <button onclick="R521430()">Right</button>
+	<br>
+	<button onclick="L321430()">Left</button> (3214 OP30) <button onclick="R321430()">Right</button>
+	<br>
+	<button onclick="L867080()">Left</button> (8670 OP80) <button onclick="R867080()">Right</button>
+	<br>
+	<button onclick="L540480()">Left</button> (5404 OP80) <button onclick="R540480()">Right</button>
+	<br>
+	<button onclick="L540180()">Left</button> (5401 OP80) <button onclick="R540180()">Right</button>
 	</div>
 	
 	
