--- a/trakberry/templates/track_10R80.html
+++ b/trakberry/templates/track_10R80.html
@@ -303,9 +303,12 @@
 		</center>
 		<div id="chart3_div" style="width: 100%; height: 400px; "></div>
 		<br>
+		<font style="font-size: 35px; color:rgb(255, 255, 255);">
 		{% for ii in GList3 %}
 		{{ii}} **
 		{% endfor %}
+		</font>
+
 		</div>
 
 
@@ -318,9 +321,11 @@
 			<div id="chart4_div" style="width: 100%; height: 400px; "></div>
 			<br>
 			
+			<font style="font-size: 35px; color:rgb(255, 255, 255);">
 			{% for ii in GList4 %}
 		{{ii}} **
 		{% endfor %}
+	</font>
 		</div>
 	<br><br>
 	
