update quick maint mgmt login

--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -92,7 +92,7 @@
                         <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Apps<b class="caret"></font></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
                             <li><a href="{{request.session.local_toggle}}/main">Supervisor</a></li>
-                            <li><a href="{{request.session.local_toggle}}/maint_mgmt">Maintenance Manager</a></li>
+                            <li><a href="{{request.session.local_toggle}}/maint_mgmt_auto">Maintenance Manager</a></li>
 							<li><a href="{{request.session.local_toggle}}/mgmt">Production Manager</a></li>
 							<li><a href="{{request.session.local_toggle}}/scrap_mgmt">Quality Manager</a></li>
 							<li class="divider"></li> 
