--- a/trakberry/templates/two_hour_display.html
+++ b/trakberry/templates/two_hour_display.html
@@ -52,7 +52,7 @@
 	
 	<div class="wrapper_main">
 	<div class="head1_u">
-		<font size="6"><b><u>Two Hour Counts</u></b></font>
+		<font size="6"><b><u>Two Hour Counts Rate ({{request.session.Rate_Trilobe}})</u></b></font>
 		<button style="position:absolute; left:80%;top:1%; background-color: #bba943;border-radius: 10px;width:70pxpx;height:25px;font-weight: 600;" onclick="all_track()">Refresh</button>
 
 	</div>
@@ -63,13 +63,13 @@
 	<br> <center>
 	<table style="width:90%;border: 1px solid black;">
 	<tr><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_1}};"><font size="6"><center>
-	<u>Hour 1</u><br> <b>{{request.session.Trilobe_Count_1}}</b> 
+	<u>Hrs 1,2</u><br> <b>{{request.session.Trilobe_Count_1}}</b> 
 	</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_2}};"><font size="6"><center>
-	<u>Hour 2</u><br> <b>{{request.session.Trilobe_Count_2}}</b> 
+	<u>Hrs 3,4</u><br> <b>{{request.session.Trilobe_Count_2}}</b> 
 	</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_3}};"><font size="6"><center>
-	<u>Hour 4</u><br> <b>{{request.session.Trilobe_Count_3}}</b> 
+	<u>Hrs 5,6</u><br> <b>{{request.session.Trilobe_Count_3}}</b> 
 	</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_4}};"><font size="6"><center>
-	<u>Hour 4</u><br> <b>{{request.session.Trilobe_Count_4}}</b> 
+	<u>Hrs 7,8</u><br> <b>{{request.session.Trilobe_Count_4}}</b> 
 	</td></tr>
 
 
