--- a/trakberry/templates/two_hour_comment_entry.html
+++ b/trakberry/templates/two_hour_comment_entry.html
@@ -48,21 +48,18 @@
 	</style>
 	</head>
 
+
 	<div class="wrapper_main">
 
-		<div class="frame1">  
+	<div class="frame1">  
 	<br> <center>
-	<form action="" method="post">{% csrf_token %}
-
 	<table style="width:90%;border: 1px solid black;">
 	<tr><td  colspan="4" style="border:1px solid black;background-color:rgb(109, 182, 182);">
 		<center>
 		<font size="6"><b><u>Trilobe Two Hour Counts Rate ({{request.session.Rate_Trilobe}})</u></b></font>
 	</center>
-
-	<button style="position:absolute; left:80%;background-color: #4d8fdb;border-radius: 10px;width:90px;height:35px;font-weight: 700;" type="submit" name="button7" value="refresh" >Refresh</button>
-
-</td></tr>
+		
+	</td></tr>
 	<tr><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_1}};"><font size="6"><center>
 	<u>Hrs 1,2</u><br> <b>{{request.session.Trilobe_Count_1}}</b> 
 	</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_2}};"><font size="6"><center>
@@ -74,48 +71,32 @@
 	</td></tr>
 
 
-	<tr><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_1}};"><font size="5"><center>
-
-		{% if request.session.Trilobe_Comment_1 = "*" %}
-		<button style="text-align: top;width:100%;height:140px;font-size: 75%;border:0px solid rgb(0, 0, 0);
+	<tr><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_1}};"><font size="6"><center>
+		<br>
+		<button style="text-align: left;width:100%;padding-bottom:5%;font-size: 75%;border:0px solid rgb(0, 0, 0);
 		background-color:  {{request.session.Trilobe_Color_1}};border:none;outline:none;"
-		type="submit" name="button7" value="comment1" /><b><font color="#000000">COMMENT NEEDED !</font></b>
-		</button>
-		{% else %}
-		<button style="text-align: top;width:100%;height:140px;font-size: 75%;border:0px solid rgb(0, 0, 0);
-		background-color:  {{request.session.Trilobe_Color_1}};border:none;outline:none;"
-		type="submit" name="button7" value="comment1" /><b><font color="#000000">{{request.session.Trilobe_Comment_1}}</font></b>
-		</button>
-		{% endif %}
-
-		</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_2}};"><font size="5"><center>
-
-
-			<button style="text-align: left;width:100%;height:140px;font-size: 75%;border:0px solid rgb(0, 0, 0);
+		type="submit" name="comment" value="comment1" /><b><font color="#000000">{{request.session.Trilobe_Indicator_1}}</font></b></button>
+		</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_2}};"><font size="6"><center>
+			<br>
+			<button style="text-align: left;width:100%;padding-bottom:5%;font-size: 75%;border:0px solid rgb(0, 0, 0);
 			background-color:  {{request.session.Trilobe_Color_2}};border:none;outline:none;"
-			type="submit" name="button7" value="comment2" /><b><font color="#000000">{{request.session.Trilobe_Comment_2}}</font></b></button>
-
-
-		</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_3}};"><font size="5"><center>
-
-
-			<button style="text-align: left;width:100%;height:140px;font-size: 75%;border:0px solid rgb(0, 0, 0);
+			type="submit" name="comment" value="comment2" /><b><font color="#000000">{{request.session.Trilobe_Indicator_2}}</font></b></button>
+		</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_3}};"><font size="6"><center>
+			<br>
+			<button style="text-align: left;width:100%;padding-bottom:5%;font-size: 75%;border:0px solid rgb(0, 0, 0);
 			background-color:  {{request.session.Trilobe_Color_3}};border:none;outline:none;"
-			type="submit" name="button7" value="comment3" /><b><font color="#000000">{{request.session.Trilobe_Comment_3}}</font></b></button>
-
-			</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_4}};"><font size="5"><center>
-
-			<button style="text-align: left;width:100%;height:140px;font-size: 75%;border:0px solid rgb(0, 0, 0);
+			type="submit" name="comment" value="comment3" /><b><font color="#000000">{{request.session.Trilobe_Indicator_3}}</font></b></button>
+		</td><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_4}};"><font size="6"><center>
+			<br>
+			<button style="text-align: left;width:100%;padding-bottom:5%;font-size: 75%;border:0px solid rgb(0, 0, 0);
 			background-color:  {{request.session.Trilobe_Color_4}};border:none;outline:none;"
-			type="submit" name="button7" value="comment4" /><b><font color="#000000">{{request.session.Trilobe_Comment_4}}</font></b></button>
-
+			type="submit" name="comment" value="comment4" /><b><font color="#000000">{{request.session.Trilobe_Indicator_4}}</font></b></button>
 		</td></tr>
 
 	</table>
-	</form>
 	<br><br>
-</div>
-</div>
+	</div>
+	</div>
 
 	</body>
 	
