--- a/trakberry/templates/two_hour_past.html
+++ b/trakberry/templates/two_hour_past.html
@@ -59,12 +59,15 @@
 		<center>
 		<font size="6">
 			<button style="background-color: #4d8fdb;border-radius: 10px;width:90px;height:35px;font-weight: 700;" type="submit" name="button7" value="prev" > <<< PREV   </button>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<b><u>Trilobe Two Hour Counts Rate ({{request.session.Rate_Trilobe}})</u></b></font>
-		
-
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<button style="background-color: #4d8fdb;border-radius: 10px;width:90px;height:35px;font-weight: 700;" type="submit" name="button7" value="next" > NEXT  >>>   </button>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			{{request.session.two_hour_date}}&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.two_hour_shift}}
 	</center>
 
-	<button style="position:absolute; left:80%;background-color: #4d8fdb;border-radius: 10px;width:90px;height:35px;font-weight: 700;" type="submit" name="button7" value="refresh" >Refresh</button>
+	
 
 </td></tr>
 	<tr><td style="border:1px solid black;background-color: {{request.session.Trilobe_Color_1}};"><font size="6"><center>
